--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 	<div class=tx><a href="#"><i>&nbsp;</i>图片轮换</a> </div>
                      <div class = "center">
                         <dl class = "fore1">
-                            <dt><p class = "demo"><a href = "slider/slider.html">简单的无缝轮播图</a></dt></p>
+                            <dt><p class = "demo"><a href = "slider/slider.html" target="_blank">简单的无缝轮播图</a></dt></p>
                         </dl> 
                         <dl class = "fore2">
                         	
@@ -101,7 +101,7 @@
                 	<div class=tx><a href="#"><i>&nbsp;</i>内容展示</a> </div>
                      <div class = "center">
                      	<dl class = "fore1">
-                             <dt><p class = "demo"><a href= "jingdong/index.htm">京东首页示例</a></p></dt>
+                             <dt><p class = "demo"><a href= "jingdong/index.htm" target="_blank">京东首页示例</a></p></dt>
                         </dl>
                         <dl class = "fore2">
                         	
