--- a/slider/slider.html
+++ b/slider/slider.html
@@ -2,31 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>slider 轮播</title>
-<link rel = "stylesheet" href = "css/slider.css">
+<title>无缝轮播实战</title>
+<link rel = "stylesheet" type = "text/css" href = "css/demo1.css">
 </head>
 
 <body>
-	<div id="container">
-    	<ul id="list">
-        	<li><img src="images/img1.jpg"></li>
-            <li><img src="images/img2.jpg"></li>
-            <li><img src="images/img3.jpg"></li>
-            <li><img src="images/img4.jpg"></li>
-            <li><img src="images/img5.jpg"></li>
+<div id = "nav">
+    	<ul id = "images">
+        	<li><img src = "images/img1.jpg" alt = ""></li>
+            <li><img src = "images/img2.jpg" alt = ""></li>
+            <li><img src = "images/img3.jpg" alt = ""></li>
+            <li><img src = "images/img4.jpg" alt = ""></li>
+            <li><img src = "images/img5.jpg" alt = ""></li>
         </ul>
-        <ul id="button">
-        	<li class="on">1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li> 
+        <ul id = "num">
+        	<li class = "on"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
-     <a href="javascript:;" id="prev" class="arrow">&lt;</a>
-     <a href="javascript:;" id="next" class="arrow">&gt;</a>
+        <div id = "btn-l" class = "btn">&lt;</div>
+        <div id = "btn-r" class = "btn">&gt;</div>
     </div>
-    <p> 左右无缝轮播</p> 
 </body>
-<script src="js/jquery.js"></script>
-<script src = "js/slider.js"></script>
+<script src = "js/jquery.js"></script>
+<script src = "js/demo1.js"></script>
 </html>
