--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 	<div class=tx><a href="#"><i>&nbsp;</i>图片轮换</a> </div>
                      <div class = "center">
                         <dl class = "fore1">
-                            <dt><p class = "demo"><a href = "slider/slider.html" target="_blank">简单的无缝轮播图</a></dt></p>
+                            <dt><p class = "demo"><a href = "slider/slider.html" target="_blank">图片切换</a></dt></p>
                         </dl> 
                         <dl class = "fore2">
-                        	<dt><p class = "demo"><a href = "slider/1/index.html" target="_blank">slider1</a></dt></p>
+                        	<dt><p class = "demo"><a href = "slider/1/index.html" target="_blank">旋转切换</a></dt></p>
                         </dl>
                         <dl class = "fore3">
-                        	<dt><p class = "demo"><a href = "slider/2/index.html" target="_blank">slider2</a></dt></p>
+                        	<dt><p class = "demo"><a href = "slider/2/index.html" target="_blank">多图切换</a></dt></p>
                         </dl>
                         <dl class = "fore4">
-                        	<dt><p class = "demo"><a href = "slider/3/index.html" target="_blank">slider3</a></dt></p>
+                        	<dt><p class = "demo"><a href = "slider/3/index.html" target="_blank">标题栏切换</a></dt></p>
                         </dl>
                         <dl class = "fore7">
                         	
@@ -79,16 +79,18 @@
                     </div> 
                 </li>
                 <li class = "a3">
-                	<div class=tx><a href="#"><i>&nbsp;</i>前端效果图</a> </div>
+                	<div class=tx><a href="#"><i>&nbsp;</i>前端效果</a> </div>
                      <div class = "center">
                         <dl class = "fore1">
-                        	<dt><p class = "demo"><a href = "xiaoguo/Noname5.html" target="_blank">index1</a></dt></p>
+                        	<dt><p class = "demo"><a href = "xiaoguo/1/index.html" target="_blank">全日历</a></dt></p>
                         </dl>
                         <dl class = "fore2">
-                        	<dt><p class = "demo"><a href = "xiaoguo/Noname12.html" target="_blank">index2</a></dt></p>
+                        	<dt><p class = "demo"><a href = "xiaoguo/2/index.html" target="_blank">简易时钟</a></dt></p>
                         </dl>
                          <dl class = "fore3">
-                        	<dt><p class = "demo"><a href = "xiaoguo/1/index.html" target="_blank">全日历</a></dt></p>
+                        	<dl class = "fore1">
+                        	<dt><p class = "demo"><a href = "xiaoguo/3/index2.html" target="_blank">皮肤切换</a></dt></p>
+                        </dl>
                         </dl>
                        <dl class = "fore4">
                         	
