--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <dl class = "fore5">
                         	<dt><p class = "demo"><a href = "biaodan/4/index.html" target="_blank">全选项</a></dt></p>
                         </dl>
+                        <dl class = "fore5">
+                        	<dt><p class = "demo"><a href = "biaodan/5/index.html" target="_blank">表单验证</a></dt></p>
+                        </dl>
                         <dl class = "fore6">
                         	
                         </dl>
@@ -93,7 +96,8 @@
                         </dl>
                         </dl>
                        <dl class = "fore4">
-                        	
+                        	<dl class = "fore1">
+                        	<dt><p class = "demo"><a href = "xiaoguo/4/index.html" target="_blank">页面滑动</a></dt></p>
                         </dl>
                         <div class = "alr">
                     		<img src = "images/20150518092152.jpg">
