--- a/content/2/index.html
+++ b/content/2/index.html
@@ -67,7 +67,7 @@
                 	<div class="row mrgtop1">
                     	<div class="col-md-3 col-sm-6">
                         	<div class="thumbnail no-br">
-                            	<img src="./img/f-clo.png">
+                                <img data-url="./img/f-clo.png" src="img/pix.png" />
                                 <div class="caption text-center f-mrgtop">
                                 	<h4>-全新云端OFFICE-</h4>
                                     <h4>文档,表格,演示</h4>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6">
                         	<div class="thumbnail no-br">
-                            	<img src="./img/f-col.png">
+                            	<img data-url="./img/f-col.png" src="img/pix.png" />
                                 <div class="caption text-center f-mrgtop">
                                 	<h4>-毫秒级实时同步-</h4>
                                     <h4>支持多用户同时编辑</h4>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6">
                         	<div class="thumbnail no-br">
-                            	<img src="./img/f-cro.png">
+                            	<img data-url="./img/f-cro.png" src="img/pix.png" />
                                 <div class="caption text-center f-mrgtop">
                                 	<h4>-跨设备-</h4>
                                     <h4>全平台支持随时随地</h4>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="col-md-3 col-sm-6">
                         	<div class="thumbnail no-br">
-                            	<img src="./img/f-safe.png">
+                            	<img data-url="./img/f-safe.png" src="img/pix.png" />
                                 <div class="caption text-center f-mrgtop">
                                 	<h4>-完整文档权限控制-</h4>
                                     <h4>通过严格的安全认证</h4>
@@ -125,7 +125,7 @@
                             	<div class="item col-xs-12 col-sm-12 active">
                                 	<div class="row">
                                     	<div class="col-xs-12 col-sm-6 col-md-7">
-                                        	<img class="img-responsive" src="./img/img_w.png">
+                                        	<img data-url="./img/img_w.png" src="img/pix.png" />
                                         </div>
                                         <div class="carousel-caption col-xs-12 col-sm-6 col-md-5 no-post">
                                         	<h3>实时协作文档</h3>
@@ -148,7 +148,7 @@
                                <div class="item col-xs-12 col-sm-12">
                                 	<div class="row">
                                     	<div class="col-xs-12 col-sm-6 col-md-7">
-                                        	<img class="img-responsive" src="./img/img_e.png">
+                                        	<img data-url="./img/img_e.png" src="img/pix.png" />
                                         </div>
                                         <div class="carousel-caption col-xs-12 col-sm-6 col-md-5 no-post">
                                         	<h3 class="c2">实时协作表格</h3>
@@ -171,7 +171,7 @@
                                 <div class="item col-xs-12 col-sm-12">
                                 	<div class="row">
                                     	<div class="col-xs-12 col-sm-6 col-md-7">
-                                        	<img class="img-responsive" src="./img/img_p.png">
+                                        	<img data-url="./img/img_p.png" src="img/pix.png" />
                                         </div>
                                         <div class="carousel-caption col-xs-12 col-sm-6 col-md-5 no-post">
                                         	<h3 class="c3">实时协作演示</h3>
@@ -194,7 +194,7 @@
                                 <div class="item col-xs-12 col-sm-12">
                                 	<div class="row">
                                     	<div class="col-xs-12 col-sm-6 col-md-7">
-                                        	<img class="img-responsive" src="./img/img_f.png">
+                                        	<img data-url="./img/img_f.png" src="img/pix.png" />
                                         </div>
                                         <div class="carousel-caption col-xs-12 col-sm-6 col-md-5 no-post">
                                         	<h3 class="c4">开放平台</h3>
@@ -239,31 +239,31 @@
                     <div class="tab-content">
                     	<div id="home" class="tab-pane fade active in" role="tabpane1">
                         	<h4 class="text-center">
-                            	<img class="suc-logo" src="./img/logo-TM.png" alt="">
+                            	<img class="suc-logo" data-url="./img/logo-TM.png" src="img/pix.png" alt="">
                                 <span>我们用一起写做产品开发,运营数据,市场策划</span>
                             </h4>
-                            <img class="img-responsive imgs" src="./img/Internet.png" alt="">
+                            <img class="img-responsive imgs" data-url="./img/Internet.png" src="img/pix.png" alt="">
                         </div>
                         <div id="education" class="tab-pane fade" role="tabpane1">
                         	<h4 class="text-center">
-                            	<img class="suc-logo" src="./img/logo-TM.png" alt="">
+                            	<img class="suc-logo" data-url="./img/logo-TM.png" src="img/pix.png" alt="">
                                 <span>师生用一起写实现作业,课件,资料传递</span>
                             </h4>
-                            <img class="img-responsive imgs" src="./img/Education.png" alt="">
+                            <img class="img-responsive imgs" data-url="./img/Education.png" src="img/pix.png" alt="">
                         </div>
                         <div id="media" class="tab-pane fade" role="tabpane1">
                         	<h4 class="text-center">
-                            	<img class="suc-logo" src="./img/logo-PencilNeverLies.png" alt="">
+                            	<img class="suc-logo" data-url="./img/logo-PencilNeverLies.png" src="img/pix.png" alt="">
                                 <span>采访,校稿我们都用一起写</span>
                             </h4>
-                            <img class="img-responsive imgs" src="./img/Media.png" alt="">
+                            <img class="img-responsive imgs" data-url="./img/Media.png" src="img/pix.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
             <!--钉钉-->
             <div class="dingding">
-            	<img class="img-responsive" src="./img/x2_logo.png">
+            	<img class="img-responsive" data-url="./img/x2_logo.png" src="img/pix.png">
                 <button type="button" class="btn btn-primary btn-lg text-center">立即体验</button>
             </div>
             <!----->
@@ -273,30 +273,30 @@
                 <div class="container">
                 	<div class="row">
                 		<div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/wps_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/wps_logo.png" src="img/pix.png" alt="">
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/alltime_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/alltime_logo.png" src="img/pix.png" alt="">
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/yitai_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/yitai_logo.png" src="img/pix.png" alt="">
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/mingdao_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/mingdao_logo.png" src="img/pix.png" alt="">
                         </div>
                 	</div>
                 	<div class="row">
                     	<div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/dingding_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/dingding_logo.png" src="img/pix.png" alt="">
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/1jijin_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/1jijin_logo.png" src="img/pix.png" alt="">
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/yifangyun_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/yifangyun_logo.png" src="img/pix.png" alt="">
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 br">
-                        	<img class="img-responsive" src="./img/teambition_logo.png" alt="">
+                        	<img class="img-responsive" data-url="./img/teambition_logo.png" src="img/pix.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
             <!--更多功能-->
             <div class="forward">
             	<h2 class="text-center">更多功能,敬请期待</h2>
-                <img class="img-responsive" src="./img/more_logo.png" alt="">
+                <img class="img-responsive" data-url="./img/more_logo.png" src="img/pix.png" alt="">
                 <button type="button" class="btn btn-block btn-primary btn-lg text-center">立即体验</button>
             </div>
             <!---->
@@ -366,5 +366,6 @@
 </div>
 	<script src="./js/jquery-1.11.3.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
