--- a/content/3/index.html
+++ b/content/3/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <nav class="navbar navbar-default navbar-fixed-top nav-box">
         <div class="container">
-            <div class="nav-header col-md-4">
+            <div class="nav-header col-md-4 col-sm-2">
             	<button type="button" class="navbar-toggle" data-toggle="collaspe" data-target="#example-navbar-toggle">
                 	<span class="sr-only">切换导航</span>
                     <span class="icon-bar"></span>
@@ -26,15 +26,8 @@
                 </button>
                 <a class="navbar-brand nav-logo"><img src="img/logo.png" alt=""></a>
             </div>
-             <!-- 搜索框 -->
-            <div class="search">
-                <span class="nav-search"></span>
-                <div class="searchbox">
-                    <input class="search-text" type="text" placeholder="请输入关键词">
-                    <input type="button" class="search-ico">
-                </div>
-            </div>
-            <div class=" col-md-8 collapse navbar-collapse nav-main" id="example-navbar-toggle">
+        <div class="col-md-8 col-sm-10">
+            <div class="collapse navbar-collapse nav-main" id="example-navbar-toggle">
             	<ul class="nav navbar-nav navbar-right nav-font">
                 	<li><a href="#">首页</a></li>
                     <li><a href="#">关于我们</a></li>
@@ -88,6 +81,17 @@
                     </ul>
                 </div>  
             </div>
+            
+              <!-- 搜索框 -->
+            <div class="search">
+                <span class="nav-search pull-right"></span>
+                <div class="searchbox">
+                    <input class="search-text" type="text" placeholder="请输入关键词">
+                    <input type="button" class="search-ico">
+                </div>
+            </div>
+         </div> 
+           
         </div>
     </nav>
 </header>
