--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 	<div class=tx><a href="#"><i>&nbsp;</i>其他</a> </div>
                      <div class = "center">
                         <dl class = "fore1">
-                        	
+                        	<dt><p class = "demo"><a href= "aother/1/api.html" target="_blank">百度api</a></p></dt>
                         </dl>
                         <dl class = "fore2">
                         	
