--- a/aother/1/api.html
+++ b/aother/1/api.html
@@ -12,7 +12,7 @@
   </style>
     <!--引用百度地图API-->
     <script type="text/javascript" 
-	src="http://api.map.baidu.com/api?v=2.0&ak=OT9Hpf8gEYoLXxoqGsSgo2Rp6UBuC9oC&s=1"></script>
+	src="https://api.map.baidu.com/api?v=2.0&ak=OT9Hpf8gEYoLXxoqGsSgo2Rp6UBuC9oC&s=1"></script>
   </head>
   
   <body>
