--- a/content/5/api.html
+++ b/content/5/api.html
@@ -11,7 +11,7 @@
     .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word;text-align:center}
   </style>
     <!--引用百度地图API-->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=OT9Hpf8gEYoLXxoqGsSgo2Rp6UBuC9oC&s=1"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=OT9Hpf8gEYoLXxoqGsSgo2Rp6UBuC9oC&s=1"></script>
   </head>
   
   <body>
