--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         	<dt><p class = "demo"><a href= "aother/1/api.html" target="_blank">百度api</a></p></dt>
                         </dl>
                         <dl class = "fore2">
-                        	
+                        	<dt><p class = "demo"><a href= "aother/2/index.html" target="_blank">animate</a></p></dt>
                         </dl>
                          <dl class = "fore3">
                         	
