--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                         <dl class = "fore5">
                         	<dt><p class = "demo"><a href= "content/6/index.html" target="_blank">响应式网页5</a></p></dt>
                         </dl>
+                        <dl class = "fore5">
+                        	<dt><p class = "demo"><a href= "content/7/index.html" target="_blank">响应式网页6</a></p></dt>
+                        </dl>
                         <div class = "alr">
                     	<img src = "images/20150518092236.jpg">
                     	</div>
