--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>前端学习总结</title>
- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel = "stylesheet" type = "text/css" href = "css/demo.css">
+<link rel = "stylesheet" type = "text/css" href = "css/reset.css">
 </head>
 
 <body>
@@ -96,6 +97,18 @@
                        <dl class = "fore4">
                         	<dl class = "fore1">
                         	<dt><p class = "demo"><a href = "xiaoguo/4/index.html" target="_blank">页面滑动</a></dt></p>
+                        </dl>
+                        <dl class = "fore5">
+                        	<dl class = "fore1">
+                        	<dt><p class = "demo"><a href = "xiaoguo/5/index.html" target="_blank">分页效果(附带模拟数据)</a></dt></p>
+                        </dl>
+                        <dl class = "fore6">
+                        	<dl class = "fore1">
+                        	<dt><p class = "demo"><a href = "xiaoguo/6/index.html" target="_blank">点击图片放大效果</a></dt></p>
+                        </dl>
+                        <dl class = "fore7">
+                        	<dl class = "fore1">
+                        	<dt><p class = "demo"><a href = "xiaoguo/7/layerout.html" target="_blank">弹出层</a></dt></p>
                         </dl>
                         <div class = "alr">
                     		<img src = "images/20150518092152.jpg">
