--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <dl class = "fore5">
                         	<dt><p class = "demo"><a href = "biaodan/5/index.html" target="_blank">表单验证</a></dt></p>
                         </dl>
+                        <dl class = "fore5">
+                        	<dt><p class = "demo"><a href = "biaodan/6/register.html" target="_blank">注册验证</a></dt></p>
+                        </dl>
                         <div class = "alr">
                     	<img src = "images/20150518092317.jpg">
                     	</div>
