--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                         <dl class = "fore5">
                         	<dt><p class = "demo"><a href = "biaodan/6/register.html" target="_blank">注册验证</a></dt></p>
                         </dl>
+                         <dl class = "fore5">
+                            <dt><p class = "demo"><a href = "biaodan/7/forgetpwd.html" target="_blank">忘记密码</a></dt></p>
+                        </dl>
                         <div class = "alr">
                     	<img src = "images/20150518092317.jpg">
                     	</div>
