--- a/slider/slider.html
+++ b/slider/slider.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无缝轮播实战</title>
+<title>无缝轮播</title>
 <link rel = "stylesheet" type = "text/css" href = "css/demo1.css">
 </head>
 
