--- a/slider/1/index.html
+++ b/slider/1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>图片切换</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" media="all"/>
 </head>
 <body>
