--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                          <dl class = "fore5">
                             <dt><p class = "demo"><a href = "biaodan/7/forgetpwd.html" target="_blank">忘记密码</a></dt></p>
                         </dl>
+                        <dl class = "fore5">
+                            <dt><p class = "demo"><a href = "biaodan/8/time.html" target="_blank">显示当前时间</a></dt></p>
+                        </dl>
                         <div class = "alr">
                     	<img src = "images/20150518092317.jpg">
                     	</div>
