--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                         	<dl class = "fore1">
                         	<dt><p class = "demo"><a href = "xiaoguo/7/layerout.html" target="_blank">弹出层</a></dt></p>
                         </dl>
+                        <dl class = "fore7">
+                            <dl class = "fore1">
+                            <dt><p class = "demo"><a href = "xiaoguo/8/index.html" target="_blank">图片文字滚动集合</a></dt></p>
+                        </dl>
                         <div class = "alr">
                     		<img src = "images/20150518092152.jpg">
                     	</div>
